@@ -17,18 +17,22 @@
  * @author   Roberto Berto <roberto@berto.net>
  * @author   Monte Ohrt <monte AT ohrt DOT com>
  *
- * @param array $params parameters
+ * @param array                     $params parameters
+ *
+ * @param \Smarty_Internal_Template $template
  *
  * @return string
  * @uses     smarty_make_timestamp()
  */
-function smarty_function_html_select_time($params)
+function smarty_function_html_select_time($params, Smarty_Internal_Template $template)
 {
-    if (!is_callable('smarty_function_escape_special_chars')) {
+    if (!isset($template->smarty->_cache[ '_required_sesc' ])) {
         require_once(SMARTY_PLUGINS_DIR . 'shared.escape_special_chars.php');
+        $template->smarty->_cache[ '_required_sesc' ] = true;
     }
-    if (!is_callable('smarty_make_timestamp')) {
+    if (!isset($template->smarty->_cache[ '_required_smt' ])) {
         require_once(SMARTY_PLUGINS_DIR . 'shared.make_timestamp.php');
+        $template->smarty->_cache[ '_required_smt' ] = true;
     }
     $prefix = "Time_";
     $field_array = null;
@@ -148,7 +152,9 @@ function smarty_function_html_select_time($params)
     if (isset($params[ 'time' ]) && is_array($params[ 'time' ])) {
         if (isset($params[ 'time' ][ $prefix . 'Hour' ])) {
             // $_REQUEST[$field_array] given
-            foreach (array('H' => 'Hour', 'i' => 'Minute', 's' => 'Second') as $_elementKey => $_elementName) {
+            foreach (array('H' => 'Hour',
+                           'i' => 'Minute',
+                           's' => 'Second') as $_elementKey => $_elementName) {
                 $_variableName = '_' . strtolower($_elementName);
                 $$_variableName =
                     isset($params[ 'time' ][ $prefix . $_elementName ]) ? $params[ 'time' ][ $prefix . $_elementName ] :
@@ -161,7 +167,9 @@ function smarty_function_html_select_time($params)
             list($_hour, $_minute, $_second) = $time = explode('-', date('H-i-s', $time));
         } elseif (isset($params[ 'time' ][ $field_array ][ $prefix . 'Hour' ])) {
             // $_REQUEST given
-            foreach (array('H' => 'Hour', 'i' => 'Minute', 's' => 'Second') as $_elementKey => $_elementName) {
+            foreach (array('H' => 'Hour',
+                           'i' => 'Minute',
+                           's' => 'Second') as $_elementKey => $_elementName) {
                 $_variableName = '_' . strtolower($_elementName);
                 $$_variableName = isset($params[ 'time' ][ $field_array ][ $prefix . $_elementName ]) ?
                     $params[ 'time' ][ $field_array ][ $prefix . $_elementName ] : date($_elementKey);
@@ -350,7 +358,10 @@ function smarty_function_html_select_time($params)
     }
 
     $_html = '';
-    foreach (array('_html_hours', '_html_minutes', '_html_seconds', '_html_meridian') as $k) {
+    foreach (array('_html_hours',
+                   '_html_minutes',
+                   '_html_seconds',
+                   '_html_meridian') as $k) {
         if (isset($$k)) {
             if ($_html) {
                 $_html .= $field_separator;
