@@ -35,8 +35,12 @@ function smarty_modifier_date_format($string, $format = null, $default_date = ''
     /**
      * require_once the {@link shared.make_timestamp.php} plugin
      */
-    if (!is_callable('smarty_make_timestamp')) {
-        require_once(SMARTY_PLUGINS_DIR . 'shared.make_timestamp.php');
+    static $is_loaded = false;
+    if (!$is_loaded) {
+        if (!is_callable('smarty_make_timestamp')) {
+            require_once(SMARTY_PLUGINS_DIR . 'shared.make_timestamp.php');
+        }
+        $is_loaded = true;
     }
     if ($string != '' && $string != '0000-00-00' && $string != '0000-00-00 00:00:00') {
         $timestamp = smarty_make_timestamp($string);
@@ -47,8 +51,20 @@ function smarty_modifier_date_format($string, $format = null, $default_date = ''
     }
     if ($formatter == 'strftime' || ($formatter == 'auto' && strpos($format, '%') !== false)) {
         if (Smarty::$_IS_WINDOWS) {
-            $_win_from = array('%D', '%h', '%n', '%r', '%R', '%t', '%T');
-            $_win_to = array('%m/%d/%y', '%b', "\n", '%I:%M:%S %p', '%H:%M', "\t", '%H:%M:%S');
+            $_win_from = array('%D',
+                               '%h',
+                               '%n',
+                               '%r',
+                               '%R',
+                               '%t',
+                               '%T');
+            $_win_to = array('%m/%d/%y',
+                             '%b',
+                             "\n",
+                             '%I:%M:%S %p',
+                             '%H:%M',
+                             "\t",
+                             '%H:%M:%S');
             if (strpos($format, '%e') !== false) {
                 $_win_from[] = '%e';
                 $_win_to[] = sprintf('%\' 2d', date('j', $timestamp));
