@@ -25,6 +25,8 @@
 function smarty_modifier_escape($string, $esc_type = 'html', $char_set = null, $double_encode = true)
 {
     static $_double_encode = null;
+    static $is_loaded1 = false;
+    static $is_loaded2 = false;
     if ($_double_encode === null) {
         $_double_encode = version_compare(PHP_VERSION, '5.2.3', '>=');
     }
@@ -46,7 +48,9 @@ function smarty_modifier_escape($string, $esc_type = 'html', $char_set = null, $
                     // php <5.2.3 - prevent double encoding
                     $string = preg_replace('!&(#?\w+);!', '%%%SMARTY_START%%%\\1%%%SMARTY_END%%%', $string);
                     $string = htmlspecialchars($string, ENT_QUOTES, $char_set);
-                    $string = str_replace(array('%%%SMARTY_START%%%', '%%%SMARTY_END%%%'), array('&', ';'), $string);
+                    $string = str_replace(array('%%%SMARTY_START%%%',
+                                                '%%%SMARTY_END%%%'), array('&',
+                                                                           ';'), $string);
 
                     return $string;
                 }
@@ -67,7 +71,9 @@ function smarty_modifier_escape($string, $esc_type = 'html', $char_set = null, $
                         $string = preg_replace('!&(#?\w+);!', '%%%SMARTY_START%%%\\1%%%SMARTY_END%%%', $string);
                         $string = htmlspecialchars($string, ENT_QUOTES, $char_set);
                         $string =
-                            str_replace(array('%%%SMARTY_START%%%', '%%%SMARTY_END%%%'), array('&', ';'), $string);
+                            str_replace(array('%%%SMARTY_START%%%',
+                                              '%%%SMARTY_END%%%'), array('&',
+                                                                         ';'), $string);
 
                         return $string;
                     }
@@ -86,7 +92,9 @@ function smarty_modifier_escape($string, $esc_type = 'html', $char_set = null, $
                 } else {
                     $string = preg_replace('!&(#?\w+);!', '%%%SMARTY_START%%%\\1%%%SMARTY_END%%%', $string);
                     $string = htmlentities($string, ENT_QUOTES, $char_set);
-                    $string = str_replace(array('%%%SMARTY_START%%%', '%%%SMARTY_END%%%'), array('&', ';'), $string);
+                    $string = str_replace(array('%%%SMARTY_START%%%',
+                                                '%%%SMARTY_END%%%'), array('&',
+                                                                           ';'), $string);
 
                     return $string;
                 }
@@ -116,8 +124,11 @@ function smarty_modifier_escape($string, $esc_type = 'html', $char_set = null, $
         case 'hexentity':
             $return = '';
             if (Smarty::$_MBSTRING) {
-                if (!is_callable('smarty_mb_to_unicode')) {
-                    require_once(SMARTY_PLUGINS_DIR . 'shared.mb_unicode.php');
+                if (!$is_loaded1) {
+                    if (!is_callable('smarty_mb_to_unicode')) {
+                        require_once(SMARTY_PLUGINS_DIR . 'shared.mb_unicode.php');
+                        $is_loaded1 = true;
+                    }
                 }
                 $return = '';
                 foreach (smarty_mb_to_unicode($string, Smarty::$_CHARSET) as $unicode) {
@@ -137,8 +148,11 @@ function smarty_modifier_escape($string, $esc_type = 'html', $char_set = null, $
         case 'decentity':
             $return = '';
             if (Smarty::$_MBSTRING) {
-                if (!is_callable('smarty_mb_to_unicode')) {
-                    require_once(SMARTY_PLUGINS_DIR . 'shared.mb_unicode.php');
+                if (!$is_loaded1) {
+                    if (!is_callable('smarty_mb_to_unicode')) {
+                        require_once(SMARTY_PLUGINS_DIR . 'shared.mb_unicode.php');
+                    }
+                    $is_loaded1 = true;
                 }
                 $return = '';
                 foreach (smarty_mb_to_unicode($string, Smarty::$_CHARSET) as $unicode) {
@@ -157,7 +171,11 @@ function smarty_modifier_escape($string, $esc_type = 'html', $char_set = null, $
 
         case 'javascript':
             // escape quotes and backslashes, newlines, etc.
-            return strtr($string, array('\\' => '\\\\', "'" => "\\'", '"' => '\\"', "\r" => '\\r', "\n" => '\\n',
+            return strtr($string, array('\\' => '\\\\',
+                                        "'" => "\\'",
+                                        '"' => '\\"',
+                                        "\r" => '\\r',
+                                        "\n" => '\\n',
                                         '</' => '<\/'));
 
         case 'mail':
@@ -165,17 +183,24 @@ function smarty_modifier_escape($string, $esc_type = 'html', $char_set = null, $
                 if (!is_callable('smarty_mb_str_replace')) {
                     require_once(SMARTY_PLUGINS_DIR . 'shared.mb_str_replace.php');
                 }
-                return smarty_mb_str_replace(array('@', '.'), array(' [AT] ', ' [DOT] '), $string);
+                return smarty_mb_str_replace(array('@',
+                                                   '.'), array(' [AT] ',
+                                                               ' [DOT] '), $string);
             }
             // no MBString fallback
-            return str_replace(array('@', '.'), array(' [AT] ', ' [DOT] '), $string);
+            return str_replace(array('@',
+                                     '.'), array(' [AT] ',
+                                                 ' [DOT] '), $string);
 
         case 'nonstd':
             // escape non-standard chars, such as ms document quotes
             $return = '';
             if (Smarty::$_MBSTRING) {
-                if (!is_callable('smarty_mb_to_unicode')) {
-                    require_once(SMARTY_PLUGINS_DIR . 'shared.mb_unicode.php');
+                if (!$is_loaded1) {
+                    if (!is_callable('smarty_mb_to_unicode')) {
+                        require_once(SMARTY_PLUGINS_DIR . 'shared.mb_unicode.php');
+                    }
+                    $is_loaded1 = true;
                 }
                 foreach (smarty_mb_to_unicode($string, Smarty::$_CHARSET) as $unicode) {
                     if ($unicode >= 126) {
